# TallerIAPUCE

./: pyproject.toml
taller/: README.md  astar_mapa.py  bfs_grafo.py  bfs_mapa.py  comparar.py  depuracion.py  dfs_grafo.py  dfs_mapa.py  ejecutar.py  grafo.py  mapa.py
tests/: test_taller.py
